--- a/sanity_ecommerce/package.json
+++ b/sanity_ecommerce/package.json
@@ -20,14 +20,16 @@
     "@sanity/default-login": "^2.30.1",
     "@sanity/desk-tool": "^2.30.1",
     "@sanity/eslint-config-studio": "^2.0.0",
+    "@sanity/image-url": "^1.0.1",
     "@sanity/vision": "^2.30.1",
     "eslint": "^8.6.0",
+    "install": "^0.13.0",
+    "npm": "^8.15.0",
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-dom": "^17.0",
     "styled-components": "^5.2.0"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/seanarch/ecommerce-next.git"
